[package]
name = "winit-input-map"
version = "0.5.0"
edition = "2021"
description = "Input Map for Winit with gamepad support"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/abss-witch/winit-input-map"
readme = "README.md"
keywords = ["winit", "input", "gamedev", "gamepad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = { version = "0.11.0", optional = true }
glium-types = { version = "0.6.1", optional = true }
winit = { version = "0.30.8", optional = true }
[lib]
path = "src/lib.rs"

[[example]]
name = "example"

[features]
default = ["gamepad", "mice-keyboard"]
glium-types = ["dep:glium-types"]
gamepad = ["dep:gilrs"]
mice-keyboard = ["dep:winit"]
